style: fixed button gap

--- a/src/components/styles/Button.module.scss
+++ b/src/components/styles/Button.module.scss
@@ -12,5 +12,6 @@
 
     @media only screen and (min-width : 37.5rem) {
         padding : 1.3125rem;
+        gap     : 1.5rem;
     }
 }
